# Flooding-AI-V2

./: pyproject.toml
app/: main.py  schemas.py
app/api/: chat_API.py  music_API.py
app/services/: chatbot.py  embedding.py  music_chain.py
